# miscellaneous

./: .gitignore  README
InterviewStreet/: LuckyNumber.cxx  MeetingPoint.cxx
QtPrograms/HelloQuad/: GLThread.h  GLWidget.h  MainHelloQuad.cpp
QtPrograms/RotatingCube/: CMakeLists.txt  RotatingCubeWidget.h
QtPrograms/opengl_qt/: cube.cpp  rotating_cube.cpp
Tutorials/ProgrammingLanguages/PythonCourse/: PythonAndTheShell.py  README.md
algorithms/recursion/combination/: CMakeLists.txt  Combination.cpp  Combination.h  CombinationMain.cpp
algorithms/recursion/permute/: CMakeLists.txt  PermuteMain.cpp
coursera/algorithms_sedgewick/8puzzle/: Board.java  Solver.java
coursera/algorithms_sedgewick/collinear/: BruteCollinearPoints.java  FastCollinearPoints.java  Point.java
coursera/algorithms_sedgewick/deques_and_rand_queues/: Deque.java
coursera/algorithms_sedgewick/kdtree/: KdTree.java  PointSET.java
coursera/algorithms_sedgewick/perlocation/: Percolation.java
coursera/dsp_pandoni_vetterli/: fft_plotting.ipynb
cpp_toy_programs/array/: rotate_the_matrix.cxx  zerothezeroes.cxx
cpp_toy_programs/recursion/combination/: CMakeLists.txt
cpp_toy_programs/recursion/permute/: CMakeLists.txt  Permute.cpp  Permute.h
cpp_toy_programs/strings/: all_unique.cxx  compress.cxx  is_permutation.cxx  isrotation.cxx  replace_space.cxx  reverse.cpp
java_toy_programs/webalo_question/: BTHashFunction.java
learning/book_intro_to_data_compression/programs/: aqfimg_dec.c  aqfimg_enc.c  distau.c  (+24 more)
learning/book_lpthw/: ex11_raw_input.py
learning/book_lrthw/: 01_AGoodFirstProgram.rb
learning/qt/2DPaintingOpengl/: CMakeLists.txt
learning/qt/HelloQuad/: CMakeLists.txt
learning/qt/opengl_qt/: CMakeLists.txt  RotatingCubeWidget.cpp  RotatingCubeWidget.h  cube.cpp  cube.h  rotating_cube.cpp
python_toy_programs/DivideAndConquer/: MBoardsTriminoes.py  QuickSort.py
python_toy_programs/NumberTheory/: NthFibonacci.py
python_toy_programs/Strings/: LexicographicSubstring.py  StringUtilFuncs.py
python_toy_programs/lists/: LinkedListStack.py  SinglyLinkedList.py
python_toy_programs/pygame/: HelloPyGame.py
winapi/hello_world/: CMakeLists.txt  hello_world_win32.cxx
winapi/simple_window/: CMakeLists.txt  simple_window.cxx
winapi/window_with_resources/: CMakeLists.txt  resource.h  simple_window.cxx  simple_window_exe.rc
(+88 files in other folders)
